--- a/Library Brider 2/Spotify/Windows/SettingsWindow.xaml
+++ b/Library Brider 2/Spotify/Windows/SettingsWindow.xaml
@@ -4,31 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Library Brider 2" Height="269.5" Width="257.869" ResizeMode="NoResize">
+        Title="Library Brider 2" Height="312.167" Width="257.869" ResizeMode="NoResize">
     <Grid>
         <Button Name="SaveButton" Content="Save" Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="SettingsButton_Click"/>
         <Button Name="CancelButton" Content="Cancel" Margin="0,0,90,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="CancelButton_Click"/>
-        
+
         <Label Content="Local Scan Options" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Label Content="Scan Depth" Margin="10,36,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="93"/>
-        <Label Content="File Order" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.25,0.135" Width="93"/>
-        <Label Content="Not Found Songs" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Width="108"/>
+        <Label Content="File Order By" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.25,0.135" Width="93"/>
+        <Label Content="Order Reversed" HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top" Width="93"/>
+        <Label Content="Not Found Songs" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" Width="108"/>
         <ComboBox Name="ScanDepthBox" HorizontalAlignment="Left" Margin="123,40,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding ScanDepth}">
             <Label Content="Top Directory"/>
             <Label Content="Deep Scan"/>
         </ComboBox>
-        <ComboBox Name="FileOrderBox" HorizontalAlignment="Left" Margin="123,67,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding FileOrder}"/>
-        <ComboBox Name="NotFoundBehaviourBox" HorizontalAlignment="Left" Margin="123,94,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding  NotFoundBehaviour}">
+        <ComboBox Name="FileOrderBox" HorizontalAlignment="Left" Margin="123,67,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding FileOrder}">
+            <Label Content="File Name"/>
+            <Label Content="Author"/>
+            <Label Content="Title"/>
+            <Label Content="Date Created"/>
+            <Label Content="Date Modified"/>
+        </ComboBox>
+        <CheckBox Name="FileOrderReversedBox" Content="" HorizontalAlignment="Left" Margin="123,99,0,0" VerticalAlignment="Top" IsChecked="{Binding FileOrderReversed}"/>
+        <ComboBox Name="NotFoundBehaviourBox" HorizontalAlignment="Left" Margin="123,128,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding  NotFoundBehaviour}">
             <Label Content="Copy to .txt file" ToolTip="Copies the track names to a .txt file for easy identification"/>
             <Label Content="Copy to folder" ToolTip="Copies the tracks to a separate folder for easy loading into Spotify"/>
         </ComboBox>
-        
-        <Label Content="Add Playlist Options" HorizontalAlignment="Left" Margin="10,121,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="121"/>
-        <Label Content="Make Playlist Private" HorizontalAlignment="Left" Margin="10,152,0,0" VerticalAlignment="Top"/>
-        <Label Content="Like Added Songs" HorizontalAlignment="Left" Margin="10,178,0,0" VerticalAlignment="Top"/>
-        <CheckBox Name="PlaylistPrivacyBox" Content="" HorizontalAlignment="Left" Margin="133,158,0,0" VerticalAlignment="Top" IsChecked="{Binding PlaylistPrivacy}"/>
-        <CheckBox Name="LikeTracksBox" Content="" HorizontalAlignment="Left" Margin="133,184,0,0" VerticalAlignment="Top" IsChecked="{Binding LikeTracks}"/>
 
-
+        <Label Content="Add Playlist Options" HorizontalAlignment="Left" Margin="11,157,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="131"/>
+        <Label Content="Make Playlist Private" HorizontalAlignment="Left" Margin="11,188,0,0" VerticalAlignment="Top"/>
+        <Label Content="Like Added Songs" HorizontalAlignment="Left" Margin="11,214,0,0" VerticalAlignment="Top"/>
+        <CheckBox Name="PlaylistPrivacyBox" Content="" HorizontalAlignment="Left" Margin="134,194,0,0" VerticalAlignment="Top" IsChecked="{Binding PlaylistPrivacy}"/>
+        <CheckBox Name="LikeTracksBox" Content="" HorizontalAlignment="Left" Margin="134,220,0,0" VerticalAlignment="Top" IsChecked="{Binding LikeTracks}"/>
     </Grid>
 </Window>
