Implemented changes to found tracks (replace/find/delete). Implemented backup and load session.

--- a/Library Brider 2/Spotify/Windows/ReplaceDialog.xaml
+++ b/Library Brider 2/Spotify/Windows/ReplaceDialog.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Library Bridger 2" Height="450" Width="800">
     <Grid>
-        <ListBox x:Name="replaceTrackBox" Margin="10" HorizontalContentAlignment="Stretch" MouseDoubleClick="SwitchBox_MouseDoubleClick">
+        <ListBox x:Name="switchBox" Margin="10" HorizontalContentAlignment="Stretch" MouseDoubleClick="SwitchBox_MouseDoubleClick">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" >
