Added audio fingerprinting with options

--- a/Library Brider 2/Spotify/Windows/SettingsWindow.xaml
+++ b/Library Brider 2/Spotify/Windows/SettingsWindow.xaml
@@ -5,22 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:p="clr-namespace:Library_Brider_2.Properties"
         mc:Ignorable="d"
-        Title="Library Brider 2" Height="365.5" Width="269.202" ResizeMode="NoResize">
+        Title="Library Brider 2" Height="437.833" Width="275.869" ResizeMode="NoResize">
     <Grid>
         <Button Name="SaveButton" Content="Save" Margin="0,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="SettingsButton_Click"/>
         <Button Name="CancelButton" Content="Cancel" Margin="0,0,90,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="75" Click="CancelButton_Click"/>
 
-        <Label Content="Local Scan Options" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label Content="Scan Depth" Margin="10,81,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="93"/>
-        <Label Content="File Order By" HorizontalAlignment="Left" Margin="10,108,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.25,0.135" Width="93"/>
-        <Label Content="Order Reversed" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="93"/>
-        <Label Content="Not Found Songs" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="108"/>
-        <ComboBox Name="ScanDepthBox" HorizontalAlignment="Left" Margin="123,85,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding Source={x:Static p:Settings.Default}, 
+        <Label Content="Local Scan Options" HorizontalAlignment="Left" Margin="10,54,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="Scan Depth" Margin="10,80,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="93"/>
+        <Label Content="File Order By" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.25,0.135" Width="93"/>
+        <Label Content="Order Reversed" HorizontalAlignment="Left" Margin="10,132,0,0" VerticalAlignment="Top" Width="93"/>
+        <Label Content="Not Found Songs" HorizontalAlignment="Left" Margin="10,158,0,0" VerticalAlignment="Top" Width="108"/>
+        <ComboBox Name="ScanDepthBox" HorizontalAlignment="Left" Margin="133,80,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding Source={x:Static p:Settings.Default}, 
            Path=ScanDepth, Mode=TwoWay}">
             <Label Content="Top Directory"/>
             <Label Content="Deep Scan"/>
         </ComboBox>
-        <ComboBox Name="FileOrderBox" HorizontalAlignment="Left" Margin="123,112,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding Source={x:Static p:Settings.Default}, 
+        <ComboBox Name="FileOrderBox" HorizontalAlignment="Left" Margin="133,106,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding Source={x:Static p:Settings.Default}, 
            Path=FileOrder, Mode=TwoWay}">
             <Label Content="File Name"/>
             <Label Content="Author"/>
@@ -28,22 +28,29 @@
             <Label Content="Date Created"/>
             <Label Content="Date Modified"/>
         </ComboBox>
-        <CheckBox Name="FileOrderReversedBox" Content="" HorizontalAlignment="Left" Margin="123,144,0,0" VerticalAlignment="Top" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
+        <CheckBox Name="FileOrderReversedBox" Content="" HorizontalAlignment="Left" Margin="233,138,0,0" VerticalAlignment="Top" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
            Path=FileOrderReversed, Mode=TwoWay}"/>
-        <ComboBox Name="NotFoundBehaviourBox" HorizontalAlignment="Left" Margin="123,173,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding Source={x:Static p:Settings.Default}, 
+        <ComboBox Name="NotFoundBehaviourBox" HorizontalAlignment="Left" Margin="133,158,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="{Binding Source={x:Static p:Settings.Default}, 
            Path=NotFoundBehaviour, Mode=TwoWay}">
             <Label Content="Copy to .txt file" ToolTip="Copies the track names to a .txt file for easy identification"/>
             <Label Content="Copy to folder" ToolTip="Copies the tracks to a separate folder for easy loading into Spotify"/>
         </ComboBox>
 
-        <Label Content="Add Playlist Options" HorizontalAlignment="Left" Margin="11,202,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="131"/>
-        <Label Content="Make Playlist Private" HorizontalAlignment="Left" Margin="11,233,0,0" VerticalAlignment="Top"/>
-        <Label Content="Like Added Songs" HorizontalAlignment="Left" Margin="11,259,0,0" VerticalAlignment="Top"/>
-        <CheckBox Name="PlaylistPrivacyBox" Content="" HorizontalAlignment="Left" Margin="134,239,0,0" VerticalAlignment="Top" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
+        <Label Content="Add Playlist Options" HorizontalAlignment="Left" Margin="10,189,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="131"/>
+        <Label Content="Make Playlist Private" HorizontalAlignment="Left" Margin="10,217,0,0" VerticalAlignment="Top"/>
+        <Label Content="Like Added Songs" HorizontalAlignment="Left" Margin="10,243,0,0" VerticalAlignment="Top"/>
+        <CheckBox Name="PlaylistPrivacyBox" Content="" HorizontalAlignment="Left" Margin="233,224,0,0" VerticalAlignment="Top" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
            Path=PlaylistPrivacy, Mode=TwoWay}"/>
-        <CheckBox Name="LikeTracksBox" Content="" HorizontalAlignment="Left" Margin="134,265,0,0" VerticalAlignment="Top" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
+        <CheckBox Name="LikeTracksBox" Content="" HorizontalAlignment="Left" Margin="233,248,0,0" VerticalAlignment="Top" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
            Path=LikeTracks, Mode=TwoWay}"/>
-        <Label Content="Application Key" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="26" FontWeight="Bold"/>
+        <Label Content="Spotify Client ID" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="26" FontWeight="Bold"/>
         <TextBox Name="AppKeyBox" HorizontalAlignment="Left" Height="23" Margin="10,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232" Text="{Binding Source={x:Static p:Settings.Default}, Path=ClientID, Mode=TwoWay}"/>
+        <Label Content="AcoustID Key" HorizontalAlignment="Left" Margin="10,326,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="98,329,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" Text="{Binding Source={x:Static p:Settings.Default}, Path=AcoustID, Mode=TwoWay}" RenderTransformOrigin="0.506,-0.304" IsEnabled="{Binding Source={x:Static p:Settings.Default}, 
+           Path=UseFingerprint, Mode=TwoWay}"/>
+        <Label Content="Audio Fingerprinting" HorizontalAlignment="Left" Margin="10,274,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="Use AcoustID to find songs by audio" HorizontalAlignment="Left" Margin="10,300,0,0" VerticalAlignment="Top"/>
+        <CheckBox  HorizontalAlignment="Left" Margin="233,305,0,0" VerticalAlignment="Top" Width="20" IsChecked="{Binding Source={x:Static p:Settings.Default}, 
+           Path=UseFingerprint, Mode=TwoWay}"/>
     </Grid>
 </Window>
